# agent-project

agent/: ARCHITECTURE_REPORT.md  __init__.py  agent_loop.py  config.py  errors.py  execution_context.py  pyproject.toml  state.py  whiteboard.py
agent/browser/: __init__.py  browser_lock.py  cdp_client.py  cdp_context.py  cdp_helpers.py  cdp_self_heal.py  opencli_client.py
agent/container/: __init__.py  agent_container.py  container_config.py  container_manager.py  container_status.py
agent/content/: __init__.py  fetcher.py
agent/context/: __init__.py  compression.py
agent/docs/: refactor-and-claude-code-comparison.md
agent/hooks/: __init__.py  config.py  runner.py  types.py
agent/hooks/builtins/: __init__.py  complete_status_hook.py  context_compression_hook.py  default_status_hook.py  duplicate_command_hook.py  error_status_hook.py  loop_detection_hook.py  needs_confirmation_status_hook.py  permission_hook.py  phase_transition_hook.py  tool_result_logging_hook.py  transition_status_hook.py
agent/llm/: __init__.py  config.py  interface.py
agent/llm/adapters/: __init__.py  base.py  (+2 more)
agent/permission/: __init__.py  checker.py  rules.py
agent/phases/: __init__.py  base.py  collect_phase.py  default_phase.py  execute_phase.py  plan_phase.py  report_phase.py  result.py
agent/prompts/: __init__.py  builder.py  default_templates.py  templates.py
agent/session/: __init__.py  logger.py  memory.py  tracking.py
agent/skills/: __init__.py  manager.py
agent/tasks/: __init__.py  manager.py  models.py
agent/tools/: __init__.py  protocol.py  registry.py
(+113 files in other folders)
