[project]
name = "agent"
version = "0.1.0"
description = "Agent project with browser automation and LLM integration"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "markitdown>=0.0.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
